examples/parser/invalid/main_with_return_type.xana
def main() :: void do
end